
<resources>

    <string name="app_name">QR Ranger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Ben</string>
    <string name="user_email">benjai2@ualberta.ca</string>
    <string name="rank">Gold</string>
    <string name="total_score">999</string>
    <string name="numQR">144</string>
    <string name="Highest_QR">Highest_QR</string>
    <string name="Lowest_QR">Lowest_QR</string>
    <string name="result">Rank:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="QRName">SexyMF</string>
    <string name="Points">Points:</string>
    <string name="ScannedBy">ScannedBy: </string>
    <string name="Comment">Comments:</string>
    <string name="numComment">2</string>
    <string name="ChangeUsername">ChangeUsername:</string>
    <string name="NewPhoneNumber">New Phone Number:</string>
    <string name="GeolocationSetting">Enable Geo Location Recording</string>
    <string name="Back">Back</string>
    <string name="Delete">Delete</string>
    <string name="ShowQR">All QR:</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="new_email">New Email:</string>

</resources>
