<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:src="@drawable/other_user_pf" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Name:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Email:"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pf_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/username"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pf_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/user_email"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/setting" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Left_OU_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Username:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rank:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Score:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Number of QR scanned:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Right_OU_stat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/OU_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/OU_rank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/OU_totalScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_score"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/OU_scannedQR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numQR"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="right"/>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/Highest_QR"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lowest_QR"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/Highest_QR"
                android:layout_width="205dp"
                android:layout_height="120dp"
                android:src="@drawable/sample_qr"/>

            <ImageView
                android:id="@+id/Lowest_QR"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/sample_qr" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other QR"
                android:textStyle="bold">
            </TextView>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/QR_image_view">
            </ListView>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>